# openrubi

./: .gitignore  README.en.md  README.md  main.py  pyproject.toml  requirements.txt
arkrecode/bonds/: bonds_info copy.json  bonds_info.json  bonds_search_dic.json  bonds_search_dic_pinyin.json  related_dic.json
arkrecode/members/: TC_to_SC.json  character_dic.json  character_dic_pinyin.json  members_info copy.json  members_info.json  pinyin_choices.json
arkrecode/redeem_code/: redeem_code.json
configs/: config.yaml  config_manager.py
core/: __init__.py  api_client.py  bot_client.py  docker_manager.py  plugin_manager.py
doc/: update_log.txt
napcat-docker/rubi/: docker-compose.yml
napcat-docker/yuki/: docker-compose.yml
plugins/: admin_cmd.py  auto_approval.py  base_plugin.py  calc_speed.py  chat.py  find_gallery.py  group_welcome.py  help_menu.py  hitokoto.py  invite_protect.py  kfc.py  morning.py  pig_test.py  plugin_switch.py  poke.py  rainbow_fart.py  redeem_code.py  set_group_title.py  test.py  toxic_positivity.py  update_logs.py  view_affection.py
utils/: logger.py  pinyin_converter.py
