[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openrubi"
version = "0.1.0"
description = "星陨计划露比机器人，基于 Python + NapCat 制作，Fork自Yuki"
readme = "README.md"
license = {text = "GPL-3.0"}
requires-python = ">=3.8"
authors = [
    {name = "OpenRubi Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "certifi",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "commonX==0.6.37",
    "curl_cffi==0.10.0",
    "Deprecated==1.2.18",
    "distro==1.9.0",
    "emoji==2.14.1",
    "exceptiongroup==1.2.2",
    "filelock==3.17.0",
    "fsspec==2025.2.0",
    "gevent==24.11.1",
    "gradio_client==1.7.2",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "huggingface-hub==0.29.1",
    "idna==3.10",
    "img2pdf==0.6.0",
    "jiter==0.8.2",
    "jmcomic==2.5.32",
    "lxml==5.3.1",
    "numpy==2.2.6",
    "openai==1.65.2",
    "opencv-python==4.12.0.88",
    "packaging==24.2",
    "pikepdf==9.5.2",
    "pillow==11.1.0",
    "pilmoji==2.0.4",
    "pycparser==2.22",
    "pycryptodome==3.22.0",
    "pydantic==2.10.6",
    "pydantic_core==2.27.2",
    "pypinyin==0.53.0",
    "PyYAML==6.0.2",
    "requests==2.32.3",
    "sniffio==1.3.1",
    "socksio==1.0.0",
    "tqdm==4.67.1",
    "typing_extensions==4.12.2",
    "urllib3==2.3.0",
    "websocket-client==1.8.0",
    "websockets==15.0",
    "wrapt==1.17.2",
    "zope.event==5.0",
    "zope.interface==7.2",
]

[project.scripts]
openrubi = "main:main"

[tool.setuptools]
packages = ["configs", "core", "plugins", "utils"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.json", "*.txt"]</content>
<parameter name="filePath">/home/ubuntu/openrubi/pyproject.toml